--- a/src/app/features/person/person-list/person-list.component.html
+++ b/src/app/features/person/person-list/person-list.component.html
@@ -64,7 +64,7 @@
           </ng-container>
 
           <ng-container matColumnDef="paymentStatus">
-            <th mat-header-cell *matHeaderCellDef>Pagamento</th>
+            <th mat-header-cell *matHeaderCellDef>Último Pagamento em Dia</th>
             <td mat-cell *matCellDef="let element">
               <mat-icon [style.color]="element.lastPaymentOnTime ? 'green' : 'red'">
                 {{ element.lastPaymentOnTime ? 'check_circle' : 'cancel' }}
