Alteração dos títulos para "18 Admin"

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,23 +1,13 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
   <form [formGroup]="loginForm" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
     <mat-card>
-      <img
-        src="assets/favicon/android-icon-192x192.png"
-        style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 5%"
-      />
-      <mat-card-title style="display: flex; justify-content: center; align-items: center"
-        >18 MC Admin</mat-card-title
-      >
+      <!-- <img src="assets/favicon/android-icon-192x192.png"
+        style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 5%" /> -->
+      <mat-card-title style="display: flex; justify-content: center; align-items: center">18 Admin</mat-card-title>
       <mat-card-content>
         <mat-form-field class="full-width">
-          <input
-            id="emailInput"
-            matInput
-            placeholder="Email"
-            formControlName="email"
-            autocomplete="email"
-            type="email"
-          />
+          <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email"
+            type="email" />
           <mat-error id="invalidEmailError" *ngIf="loginForm.controls['email'].hasError('email')">
             Digite um endereço de e-mail válido
           </mat-error>
@@ -26,14 +16,8 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input
-            id="passwordInput"
-            matInput
-            [type]="hidePassword ? 'password' : 'text'"
-            placeholder="Senha"
-            formControlName="password"
-            autocomplete="current-password"
-          />
+          <input id="passwordInput" matInput [type]="hidePassword ? 'password' : 'text'" placeholder="Senha"
+            formControlName="password" autocomplete="current-password" />
           <button mat-icon-button matSuffix (click)="togglePasswordVisibility()" type="button">
             <mat-icon>{{ hidePassword ? 'visibility' : 'visibility_off' }}</mat-icon>
           </button>
@@ -46,13 +30,8 @@
         </div>
       </mat-card-content>
       <mat-card-actions class="login-actions">
-        <button
-          mat-raised-button
-          id="login"
-          color="primary"
-          [disabled]="loginForm.invalid || loading"
-          (click)="login()"
-        >
+        <button mat-raised-button id="login" color="primary" [disabled]="loginForm.invalid || loading"
+          (click)="login()">
           Login
         </button>
         <button mat-button id="resetPassword" (click)="resetPassword()" type="button">Esqueci minha senha</button>
