--- a/src/app/features/auth/password-reset/password-reset.component.html
+++ b/src/app/features/auth/password-reset/password-reset.component.html
@@ -1,7 +1,7 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
   <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
     <mat-card>
-      <mat-card-title>18 MC Admin</mat-card-title>
+      <mat-card-title>18 Admin</mat-card-title>
       <mat-card-subtitle>Redefinir sua senha</mat-card-subtitle>
       <mat-card-content>
         <mat-form-field class="full-width">
