--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
-      <h1>18 MC Admin</h1>
+      <h1>18 Admin</h1>
     </a>
 
     <span class="navbar-spacer"></span>
