Selecionar comando no cadastro de divisão

--- a/src/app/features/division/division-registration/division-registration.component.html
+++ b/src/app/features/division/division-registration/division-registration.component.html
@@ -22,6 +22,22 @@
 
       <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
         <mat-form-field [fxFlex]="50">
+          <mat-select
+            formControlName="commandId"
+            placeholder="Selecione o comando"
+            (selectionChange)="getRegionals(); division.regionalId = 0"
+            [(ngModel)]="selectedCommandId"
+            required
+          >
+            <mat-option *ngFor="let command of commands" [value]="command.id">
+              {{ command.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+        <mat-form-field [fxFlex]="50">
           <mat-label>Regional </mat-label>
           <mat-select formControlName="regionalId" [(ngModel)]="division.regionalId" required>
             <mat-option *ngFor="let regional of regionals" [value]="regional.id">{{ regional.name }}</mat-option>
