Cadastro de eventos e enquetes

--- a/src/app/features/poll/poll-list/poll-list.component.html
+++ b/src/app/features/poll/poll-list/poll-list.component.html
@@ -3,7 +3,7 @@
     <mat-card>
       <mat-card-content>
         <h2>
-          Ações Sociais
+          Enquetes
           <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
             <mat-icon>add</mat-icon>
           </button>
@@ -32,7 +32,7 @@
           </mat-form-field>
 
           <mat-form-field [fxFlex]="33">
-            <mat-select placeholder="Selecione a divisão" (selectionChange)="getSocialActions()"
+            <mat-select placeholder="Selecione a divisão" (selectionChange)="getPolls()"
               [(ngModel)]="selectedDivisionId">
               <mat-option *ngFor="let division of divisions" [value]="division.id">
                 {{ division.name }}
@@ -41,7 +41,7 @@
           </mat-form-field>
         </div>
 
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="getSocialActions()">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="getPolls()">
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
             <td mat-cell *matCellDef="let element">{{ element.title }}</td>
@@ -52,26 +52,15 @@
             <td mat-cell *matCellDef="let element">{{ element.date | date : "dd/MM/yyyy" }}</td>
           </ng-container>
 
-          <ng-container matColumnDef="actionType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
-            <td mat-cell *matCellDef="let element">{{ element.actionType === "internal" ? "Interna" : element.actionType
-              === "external" ? "Externa" : "Arrecadação"}}</td>
-          </ng-container>
-
           <ng-container matColumnDef="actions">
             <th id="actions" mat-header-cell *matHeaderCellDef class="w120">Ações</th>
             <td mat-cell *matCellDef="let element">
               <button mat-icon-button matTooltip="Editar" [routerLink]="['edit', element.id]">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button matTooltip="Participantes" (click)="showParticipatsDialog(element.id)">
+              <button mat-icon-button matTooltip="Participantes" (click)="showParticipantsDialog(element.id)">
                 <mat-icon>groups</mat-icon>
               </button>
-              <a href="https://forms.gle/vmBXVxTHzmkj9bme8" target="_blank">
-                <button mat-icon-button matTooltip="Ficha de ação social">
-                  <mat-icon>open_in_new</mat-icon>
-                </button>
-              </a>
             </td>
           </ng-container>
 
@@ -86,14 +75,9 @@
                 <a mat-menu-item [routerLink]="['edit', element.id]">
                   <span>Editar</span>
                 </a>
-                <button mat-menu-item (click)="showParticipatsDialog(element.id)">
+                <button mat-menu-item (click)="showParticipantsDialog(element.id)">
                   <span>Visualizar Participantes</span>
                 </button>
-                <a mat-menu-item
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSfT3eqy9pJ74JWucMmKZ68jS7ErQki6eX01-b5soS4qFsJ0lg/viewform"
-                  target="_blank">
-                  <span>Ficha de ação</span>
-                </a>
               </mat-menu>
             </td>
           </ng-container>
@@ -103,7 +87,7 @@
         </table>
 
         <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons
-          (page)="getSocialActions()"></mat-paginator>
+          (page)="getPolls()"></mat-paginator>
       </mat-card-content>
     </mat-card>
   </div>
