Acesso do dashboard de ações sociais pela lista de ações sociais

--- a/src/app/features/social-action/social-action-list/social-action-list.component.html
+++ b/src/app/features/social-action/social-action-list/social-action-list.component.html
@@ -7,6 +7,9 @@
           <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
             <mat-icon>add</mat-icon>
           </button>
+          <button mat-mini-fab color="primary" [routerLink]="['/dashboard']" style="margin-left: 5px">
+            <mat-icon>leaderboard</mat-icon>
+          </button>
         </h2>
 
         <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px">
