--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -1,6 +1,11 @@
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
   <div fxFlex="97%">
-    <h2>Ações Sociais - Divisão</h2>
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+      <button mat-mini-fab color="primary" (click)="goBack()" matTooltip="Voltar para lista">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+      <h2 style="margin: 0;">Ações Sociais - Divisão</h2>
+    </div>
 
     <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px">
       <mat-form-field [fxFlex]="33">
