--- a/src/app/features/person/person-late-payment-dialog/person-late-payment-dialog.component.html
+++ b/src/app/features/person/person-late-payment-dialog/person-late-payment-dialog.component.html
@@ -64,4 +64,11 @@
     <tr mat-header-row *matHeaderRowDef="['year', 'month', 'paidAt', 'notes']"></tr>
     <tr mat-row *matRowDef="let row; columns: ['year', 'month', 'paidAt', 'notes']"></tr>
   </table>
+  <mat-paginator
+    [length]="totalItems"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 25]"
+    (page)="onPageChange($event)"
+    showFirstLastButtons>
+  </mat-paginator>
 </mat-dialog-content>
