--- a/src/app/features/report/graduation-report/graduation-report.component.html
+++ b/src/app/features/report/graduation-report/graduation-report.component.html
@@ -101,7 +101,7 @@
           </div>
         </mat-card>
 
-        <mat-card class="summary-card" fxFlex="calc(25% - 16px)" fxFlex.lt-md="calc(50% - 16px)">
+        <!-- <mat-card class="summary-card" fxFlex="calc(25% - 16px)" fxFlex.lt-md="calc(50% - 16px)">
           <div class="summary-icon orange">
             <mat-icon>emoji_events</mat-icon>
           </div>
@@ -109,7 +109,7 @@
             <span class="summary-label">Pontuação Máxima</span>
             <span class="summary-value">{{ maxScore }}</span>
           </div>
-        </mat-card>
+        </mat-card> -->
 
         <mat-card class="summary-card" fxFlex="calc(25% - 16px)" fxFlex.lt-md="calc(50% - 16px)">
           <div class="summary-icon green">
@@ -122,7 +122,6 @@
         </mat-card>
       </div>
 
-      <!-- Legend -->
       <mat-card class="legend-card">
         <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="24px">
           <div class="legend-item">
@@ -144,10 +143,8 @@
         </div>
       </mat-card>
 
-      <!-- Data Table -->
       <mat-card class="table-card" *ngIf="reportData.length > 0">
         <table mat-table [dataSource]="reportData" class="graduation-table">
-          <!-- Position Column -->
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef class="position-column">#</th>
             <td mat-cell *matCellDef="let element; let i = index" class="position-column">
@@ -157,7 +154,6 @@
             </td>
           </ng-container>
 
-          <!-- Name Column -->
           <ng-container matColumnDef="fullName">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
             <td mat-cell *matCellDef="let element">
@@ -168,7 +164,6 @@
             </td>
           </ng-container>
 
-          <!-- Social Action Column -->
           <ng-container matColumnDef="socialAction">
             <th mat-header-cell *matHeaderCellDef class="score-column">
               <mat-icon class="column-icon blue">diversity_3</mat-icon>
@@ -180,7 +175,6 @@
             </td>
           </ng-container>
 
-          <!-- Poll Column -->
           <ng-container matColumnDef="poll">
             <th mat-header-cell *matHeaderCellDef class="score-column">
               <mat-icon class="column-icon purple">poll</mat-icon>
