--- a/src/app/features/report/graduation-report/graduation-report.component.html
+++ b/src/app/features/report/graduation-report/graduation-report.component.html
@@ -148,7 +148,7 @@
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef class="position-column">#</th>
             <td mat-cell *matCellDef="let element; let i = index" class="position-column">
-              <span class="position-badge" [ngClass]="{ 'gold': i === 0, 'silver': i === 1, 'bronze': i === 2 }">
+              <span class="position-badge" [ngClass]="getPositionBadgeClass(element.totalScore)">
                 {{ i + 1 }}
               </span>
             </td>
