--- a/src/app/features/report/graduation-report/graduation-report.component.html
+++ b/src/app/features/report/graduation-report/graduation-report.component.html
@@ -212,7 +212,7 @@
             <th mat-header-cell *matHeaderCellDef class="total-column">Voto do Diretor</th>
             <td mat-cell *matCellDef="let element" class="vote-column">
               <button mat-icon-button (click)="toggleVote(element.personId)"
-                [color]="hasVote(element.personId) ? 'primary' : 'default'"
+                [ngClass]="{'vote-active': hasVote(element.personId)}"
                 matTooltip="{{ hasVote(element.personId) ? 'Remover voto' : 'Votar' }}">
                 <mat-icon>{{ hasVote(element.personId) ? 'thumb_up' : 'thumb_up_off_alt' }}</mat-icon>
               </button>
