--- a/src/app/features/report/graduation-report/graduation-report.component.html
+++ b/src/app/features/report/graduation-report/graduation-report.component.html
@@ -108,19 +108,27 @@
       <mat-card class="legend-card">
         <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="24px">
           <div class="legend-item">
-            <mat-icon class="legend-icon blue">diversity_3</mat-icon>
+            <span class="legend-badge blue">
+              <mat-icon>diversity_3</mat-icon>
+            </span>
             <span>Ação Social</span>
           </div>
           <div class="legend-item">
-            <mat-icon class="legend-icon purple">poll</mat-icon>
+            <span class="legend-badge purple">
+              <mat-icon>poll</mat-icon>
+            </span>
             <span>Enquete</span>
           </div>
           <div class="legend-item">
-            <mat-icon class="legend-icon orange">event</mat-icon>
+            <span class="legend-badge orange">
+              <mat-icon>event</mat-icon>
+            </span>
             <span>Outros Eventos</span>
           </div>
           <div class="legend-item">
-            <mat-icon class="legend-icon green">payments</mat-icon>
+            <span class="legend-badge green">
+              <mat-icon>payments</mat-icon>
+            </span>
             <span>Mensalidade</span>
           </div>
         </div>
@@ -150,7 +158,9 @@
 
           <ng-container matColumnDef="socialAction">
             <th mat-header-cell *matHeaderCellDef class="score-column">
-              <mat-icon class="column-icon blue">diversity_3</mat-icon>
+              <span class="column-badge blue">
+                <mat-icon>diversity_3</mat-icon>
+              </span>
             </th>
             <td mat-cell *matCellDef="let element" class="score-column">
               <mat-icon [ngClass]="getScoreClass(element.scores.socialAction)">
@@ -161,7 +171,9 @@
 
           <ng-container matColumnDef="poll">
             <th mat-header-cell *matHeaderCellDef class="score-column">
-              <mat-icon class="column-icon purple">poll</mat-icon>
+              <span class="column-badge purple">
+                <mat-icon>poll</mat-icon>
+              </span>
             </th>
             <td mat-cell *matCellDef="let element" class="score-column">
               <mat-icon [ngClass]="getScoreClass(element.scores.poll)">
@@ -172,7 +184,9 @@
 
           <ng-container matColumnDef="otherEvents">
             <th mat-header-cell *matHeaderCellDef class="score-column">
-              <mat-icon class="column-icon orange">event</mat-icon>
+              <span class="column-badge orange">
+                <mat-icon>event</mat-icon>
+              </span>
             </th>
             <td mat-cell *matCellDef="let element" class="score-column">
               <mat-icon [ngClass]="getScoreClass(element.scores.otherEvents)">
@@ -183,7 +197,9 @@
 
           <ng-container matColumnDef="payments">
             <th mat-header-cell *matHeaderCellDef class="score-column">
-              <mat-icon class="column-icon green">payments</mat-icon>
+              <span class="column-badge green">
+                <mat-icon>payments</mat-icon>
+              </span>
             </th>
             <td mat-cell *matCellDef="let element" class="score-column">
               <mat-icon [ngClass]="getScoreClass(element.scores.payments)">
