--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -51,48 +51,48 @@
         <h3 mat-subheader>Home</h3>
 
         <a [role]="['admin']" mat-list-item [routerLink]="['/user']" routerLinkActive="active">
-          <mat-icon mat-list-icon> group </mat-icon>
-          <p mat-line>Usuários</p>
+          <mat-icon matListItemIcon>group</mat-icon>
+          <span matListItemTitle>Usuários</span>
         </a>
 
         <a mat-list-item [routerLink]="['/social-action']" routerLinkActive="active">
-          <mat-icon mat-list-icon> diversity_3 </mat-icon>
-          <p mat-line>Ações Sociais</p>
+          <mat-icon matListItemIcon>diversity_3</mat-icon>
+          <span matListItemTitle>Ações Sociais</span>
         </a>
 
         <a mat-list-item [routerLink]="['/event']" routerLinkActive="active">
-          <mat-icon mat-list-icon> event </mat-icon>
-          <p mat-line>Eventos</p>
+          <mat-icon matListItemIcon>event</mat-icon>
+          <span matListItemTitle>Eventos</span>
         </a>
 
         <a mat-list-item [routerLink]="['/poll']" routerLinkActive="active">
-          <mat-icon mat-list-icon> poll </mat-icon>
-          <p mat-line>Enquetes</p>
+          <mat-icon matListItemIcon>poll</mat-icon>
+          <span matListItemTitle>Enquetes</span>
         </a>
 
         <a [role]="['admin']" mat-list-item [routerLink]="['/regional']" routerLinkActive="active">
-          <mat-icon mat-list-icon> apps </mat-icon>
-          <p mat-line>Regionais</p>
+          <mat-icon matListItemIcon>apps</mat-icon>
+          <span matListItemTitle>Regionais</span>
         </a>
 
         <a [role]="['admin']" mat-list-item [routerLink]="['/division']" routerLinkActive="active">
-          <mat-icon mat-list-icon> safety_divider </mat-icon>
-          <p mat-line>Divisões</p>
+          <mat-icon matListItemIcon>safety_divider</mat-icon>
+          <span matListItemTitle>Divisões</span>
         </a>
 
         <a mat-list-item [routerLink]="['/person']" routerLinkActive="active">
-          <mat-icon mat-list-icon> group </mat-icon>
-          <p mat-line>Integrantes</p>
+          <mat-icon matListItemIcon>group</mat-icon>
+          <span matListItemTitle>Integrantes</span>
         </a>
 
         <a [role]="['admin']" mat-list-item [routerLink]="['/report/graduation']" routerLinkActive="active">
-          <mat-icon mat-list-icon> school </mat-icon>
-          <p mat-line>Relatório de Graduação</p>
+          <mat-icon matListItemIcon>school</mat-icon>
+          <span matListItemTitle>Relatório de Graduação</span>
         </a>
 
         <a mat-list-item [routerLink]="['/auth/login']">
-          <mat-icon mat-list-icon>exit_to_app</mat-icon>
-          <p mat-line>Sair</p>
+          <mat-icon matListItemIcon>exit_to_app</mat-icon>
+          <span matListItemTitle>Sair</span>
         </a>
       </mat-nav-list>
     </mat-sidenav>
