--- a/src/gemini-theme.scss
+++ b/src/gemini-theme.scss
@@ -6,9 +6,9 @@
 //  If you specify typography styles for the components you use elsewhere, you should delete this line.
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+//    `@include mat.typography-hierarchy(mat.define-typography-config());`
+@include mat.all-component-typographies();
+@include mat.core();
 
 // Paleta de cores baseada no tema Gemini
 $gemini-primary: mat.define-palette(mat.$blue-grey-palette, 900);
@@ -21,12 +21,12 @@ $gemini-theme: mat.define-dark-theme((
     accent: $gemini-accent,
     warn: $gemini-warn
   ),
-  typography: mat.define-legacy-typography-config(),
+  typography: mat.define-typography-config(),
   density: 0
 ));
 
 // Aplica o tema a todos os componentes do Angular Material
-@include mat.all-legacy-component-themes($gemini-theme);
+@include mat.all-component-themes($gemini-theme);
 
 // Definição de variáveis CSS para personalização extra
 :root {
